test/testzillians-compiler/ThorScriptCompilerStaticTest/error/4_parameter/UNEXPECTED_VARIADIC_PARAM.t
@static_test { expect_message={ level="LEVEL_ERROR", id="UNEXPECTED_VARIADIC_PARAM" } }
function f<T, ...>(a:..., b:T):void
{
}
